# visio-to-xml

./: .gitignore  README.md  config.env copy.example  config.env.example  pyproject.toml
examples/: README.md
tests/: __init__.py
tests/unit/: test_config.py
visio_to_xml/: __init__.py
visio_to_xml/cli/: __init__.py  main.py
visio_to_xml/converters/: __init__.py  drawio_converter.py  mermaid_converter.py
visio_to_xml/core/: __init__.py  config.py  converter.py
visio_to_xml/ocr/: __init__.py  mistral_ocr.py
visio_to_xml/parsers/: __init__.py  visio_parser.py
